Refactor LeaveService based on previous comments